--- a/reviews_analytics/requirements.txt
+++ b/reviews_analytics/requirements.txt
@@ -1,10 +1,12 @@
 asttokens==2.4.1
 certifi==2023.11.17
+chardet==3.0.4
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 comm==0.2.0
 contourpy==1.2.0
+ctransformers==0.2.27
 cycler==0.12.1
 debugpy==1.8.0
 decorator==5.1.1
@@ -13,8 +15,16 @@ executing==2.0.1
 filelock==3.13.1
 fonttools==4.46.0
 fsspec==2023.12.2
+googletrans==3.0.0
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2023.1.1
+httpcore==0.9.1
+httpx==0.13.3
 huggingface-hub==0.19.4
-idna==3.6
+hyperframe==5.2.0
+idna==2.10
 ipykernel==6.27.1
 ipython==8.18.1
 jedi==0.19.1
@@ -23,6 +33,7 @@ joblib==1.3.2
 jupyter_client==8.6.0
 jupyter_core==5.5.1
 kiwisolver==1.4.5
+langdetect==1.0.9
 MarkupSafe==2.1.3
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
@@ -39,6 +50,7 @@ platformdirs==4.1.0
 prompt-toolkit==3.0.43
 psutil==5.9.7
 pure-eval==0.2.2
+py-cpuinfo==9.0.0
 Pygments==2.17.2
 pyparsing==3.1.1
 python-dateutil==2.8.2
@@ -49,9 +61,11 @@ pyzmq==25.1.2
 rake-nltk==1.0.6
 regex==2023.10.3
 requests==2.31.0
+rfc3986==1.5.0
 safetensors==0.4.1
 seaborn==0.13.0
 six==1.16.0
+sniffio==1.3.0
 stack-data==0.6.3
 sympy==1.12
 tokenizers==0.15.0
